--- a/web/banner.html
+++ b/web/banner.html
@@ -36,6 +36,7 @@ a:hover { text-decoration: underline;}
 | <a href="http://cvs.kldp.net/cgi-bin/cvsweb.cgi/?cvsroot=nabi">cvs browser</a>
 | <a href="http://kldp.net/bugs/?group_id=275">bugs</a>
 <!-- | <a href="">lists</a> -->
+| <a href="http://kldp.net/projects/nabi/">project</a>
 | <a href="http://chem.skku.ac.kr/~kle/moin/nabi">wiki</a>
 | <a href="http://kldp.net/">KLDP.net</a> |</div>
 </body>
