--- a/web/body.html
+++ b/web/body.html
@@ -2,7 +2,14 @@
 <head>
 <title>Nabi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=euk-kr">
-<link rel="stylesheet" href="weblib.css"></head>
+<style type="text/css">
+BODY {
+	margin-left: 2%;
+	margin-right: 2%;
+}
+</style>
+<link rel="stylesheet" href="weblib.css">
+</head>
 
 <body bgcolor="#FFFFFF">
 <p>Nabi 나비는 X window 환경에서 한글을 입력 가능하게 하는 X Input Method
@@ -11,9 +18,22 @@
 
 <p>관심 있는 분들의 참여 바랍니다.</p>
 
-<p>&nbsp;</p>
+<h2 class="title">설치</h2>
+<p class="content">
+컴파일해서 설치하는 방법은 일반적인 프로그램들 처럼
+<pre>
+./configure
+make
+make install 
+</pre>
+하시면 됩니다.
 
-<p>&nbsp;</p>
+</p>
+
+<h2>사용방법</h2>
+한영 전환은 "한/영"키를 누르거나 Shift-Space를 누르면 됩니다.<br>
+자판 선택은 시스템 트레이의 상태정보 아이콘에서 오른쪽 버튼을 누르면 나오는 
+메뉴에서 선택을 하면 됩니다.<br>
 
 </body>
 </html>
