update for new design
git-svn-id: http://kldp.net/svn/nabi/trunk@245 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/web/body.html
+++ b/web/body.html
@@ -8,7 +8,7 @@ BODY {
 	margin-right: 2%;
 }
 </style>
-<link rel="stylesheet" href="weblib.css">
+<link rel="stylesheet" href="nabi.css" type="text/css">
 </head>
 
 <body bgcolor="#FFFFFF">
