--- a/web/index.html
+++ b/web/index.html
@@ -4,11 +4,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
 </head>
 
-<frameset rows="45,*" cols="*" border="0" framespacing="0" frameborder="NO"> 
-  <frame src="banner.html">
-  <frame name="nabi_main" src="body.html">
+<frameset rows="63,*" cols="*" border="0" framespacing="0" frameborder="NO"> 
+  <frame src="menu.html">
+  <frame name="nabi_main" src="http://chem.skku.ac.kr/~kle/main/nabi">
 </frameset>
-<noframes><body bgcolor="#FFFFFF">
 
-</body></noframes>
+<noframes><body> </body></noframes>
+
 </html>
