버그 리포팅 링크 수정
git-svn-id: http://kldp.net/svn/nabi/trunk@279 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/web/menu.html
+++ b/web/menu.html
@@ -16,7 +16,7 @@
 <!-- | <a href="docs/index.html">docs</a> -->
 | <a href="http://kldp.net/project/showfiles.php?group_id=275">다운로드</a>
 | <a href="http://cvs.kldp.net/cgi-bin/cvsweb.cgi/?cvsroot=nabi">cvs browser</a>
-| <a href="http://kldp.net/bugs/?group_id=275">버그보고</a>
+| <a href="http://kldp.net/tracker/?func=add&group_id=275&atid=100275">버그보고</a>
 | <a href="http://kldp.net/forum/forum.php?forum_id=897">게시판</a>
 <!-- | <a href="">lists</a> -->
 | <a href="http://kldp.net/projects/nabi/">프로젝트페이지</a>
