기본 링크를 수정해서 위키메뉴가 안보이게 함
git-svn-id: http://kldp.net/svn/nabi/trunk@280 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
 
 <frameset rows="63,*" cols="*" border="0" framespacing="0" frameborder="NO"> 
   <frame src="menu.html">
-  <frame name="nabi_main" src="http://chem.skku.ac.kr/~kle/main/nabi">
+  <frame name="nabi_main" src="http://chem.skku.ac.kr/~kle/main/nabi#s-1">
 </frameset>
 
 <noframes><body> </body></noframes>
