--- a/web/menu.html
+++ b/web/menu.html
@@ -12,7 +12,7 @@
 <h1 class="headline">Nabi - Simple Hangul X Input Method <span style="font-size:12pt;">한글 입력기 나비</span></h1>
 </div>
 <div class="menu">
-| <a href="http://chem.skku.ac.kr/~kle/main/nabi">홈페이지</a>
+| <a href="http://chem.skku.ac.kr/~kle/main/nabi#s-1">홈페이지</a>
 <!-- | <a href="docs/index.html">docs</a> -->
 | <a href="http://kldp.net/project/showfiles.php?group_id=275">다운로드</a>
 | <a href="http://cvs.kldp.net/cgi-bin/cvsweb.cgi/?cvsroot=nabi">cvs browser</a>
