--- a/web/about.html
+++ b/web/about.html
@@ -45,45 +45,33 @@
   <span> ] </span>
 </td>
 <td id="main" width="100%">
+<h1>나비에 대하여</h1>
+<h2>나비 소개</h2>
 
-
-<p>나비는 사용하기 쉬우면서도 강력한 기능을 가진 GTK+2 로 만들어진 GNU 한글 XIM  프로그램입니다.  X 에서 한글을 사용하기 위하연
+<p>>나비는 사용하기 쉬우면서도 강력한 기능을 가진 GTK+2 로 만들어진 GNU 한글 XIM  프로그램입니다.  X 에서 한글을 사용하기 위하연
   자유롭게 사용 배포할수 있습니다. 현재 많은 시스템과 플렛폼에서 작동을 하며,
-  한글을 사용하기 위한 기본 입력기로 사용되고 있습니다.</p>
-
-
-<!-- begin chartae -->
-<h1 class="newsheading">
-<span class="newstitle">홈페이지 개편</span>
-<span class="newsdate">2004-10-02</span>&nbsp;</h1>
-<div class="news">
-<img alt="[?]" src="./images/nabi_new.png"><p></p><p>
-작게 나마 홈페이지 디자인을 바꾸었습니다. 또한 영문 나비 페이지또한 준비 중입니다.
+  한글을 사용하기 위한 기본 입력기로 사용되고 있습니다
 </p>
-</div>
 
-<h1 class="newsheading">
-<span class="newstitle">나비 0.14 버전 출시</span>
-<span class="newsdate">2004-08-28</span>&nbsp;</h1>
-<div class="news">
-<img alt="[?]" src="./images/nabi_new.png"><p></p><p>
-설정창 제공, 
-java 프로그램에서 한글 입력을 더 자연스럽게 수정, 
-한자/심벌 입력리스트에서 갯수를 9개로 수정,
-지원하지 않는 locale의 경우 워닝 출력, 
-en_US.UTF-8 locale에서도 한글 입력 지원
-</p>
-</div>
 
-<h1 class="newsheading">
-<span class="newstitle">나비 0.13 버전 출시</span>
-<span class="newsdate">2004-06-10</span>&nbsp;</h1>
-<div class="news">
-<img alt="[?]" src="./images/nabi_new.png"><p></p><p>
-  세션기능 지원,
- 한자 입력시 뜻도 보여줌,
- 메모리 릭 문제 등 자잘한 버그 수정
+<h2>기능(Feature)과 특징</h2>
+  <ul>
+    <li>XkbKeymap과 충돌하지 않음 </li>
+    <li>ami와는 다르게 ㅎㅎㅎ도 입력이 잘 됨</li>
+    <li> SystemTray에서 여러 테마를 선택할 수 있음</li>
+    <li> 두벌식, 세벌식두벌자판, 세벌식최종, 세벌식390 기본 지원</li>
+    <li> Keyboard table과 Compose map이 외부의 파일로 정의되어 있으므로 사용자 자판 지원 가능</li>
+    <li>Dvorak 2 자판 지원</li>
+    <li>64bit architecture 에서 동작</li>
+    <li>Eclipse, Nautilus에서도 정상적으로 입력</li>
+    <li> en_US.UTF-8 지원</li>
+  </ul>
+<h2>관련 링크</h2>
+  <ul>
 
+    <li><a href="http://imhangul.kldp.net">imhangul(gtk immoule)</a></li>
+    <li><a href="http://qtimhangul.kldp.net">qtimhangul(qt immodule)</a></li>
+  </ul>
 </p>
 </div>
 
