--- a/web/about.html
+++ b/web/about.html
@@ -70,7 +70,7 @@
   <ul>
 
     <li><a href="http://imhangul.kldp.net">imhangul(gtk immoule)</a></li>
-    <li><a href="http://qtimhangul.kldp.net">qtimhangul(qt immodule)</a></li>
+    <li><a href="http://qimhangul.kldp.net">qimhangul(qt immodule)</a></li>
   </ul>
 </p>
 </div>
