--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,7 @@
 <td id="main" width="100%">
 
 
-<p>나비는 사용하기 쉬우면서도 강력한 기능을 가진 GTK+2 로 만들어진 GNU 한글 XIM  프로그램입니다.  X 에서 한글을 사용하기 위하연
+<p>나비는 사용하기 쉬우면서도 강력한 기능을 가진 GTK+2 로 만들어진 GNU 한글 XIM  프로그램입니다.  X 에서 한글을 사용하기 위하여
   자유롭게 사용 배포할수 있습니다. 현재 많은 시스템과 플렛폼에서 작동을 하며,
   한글을 사용하기 위한 기본 입력기로 사용되고 있습니다.</p>
 
