--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
 
 <p>나비는 사용하기 쉬우면서도 강력한 기능을 가진 GTK+2 로 만들어진 GNU 한글 XIM  프로그램입니다.  X 에서 한글을 사용하기 위하여
   자유롭게 사용 배포할수 있습니다. 현재 많은 시스템과 플렛폼에서 작동을 하며,
-  한글을 사용하기 위한 기본 입력기로 사용되고 있습니다.</p>
+  한글을 사용하기 위한 기본 한글 입력기로 사용되고 있습니다.</p>
 
 
 <!-- begin chartae -->
@@ -63,7 +63,7 @@
 </div>
 
 <h1 class="newsheading">
-<span class="newstitle">나비 0.14 버전 출시</span>
+<span class="newstitle">나비 한글 입력기 버전 0.14 버전 출시</span>
 <span class="newsdate">2004-08-28</span>&nbsp;</h1>
 <div class="news">
 <img alt="[?]" src="./images/nabi_new.png"><p></p><p>
@@ -76,7 +76,7 @@ en_US.UTF-8 locale에서도 한글 입력 지원
 </div>
 
 <h1 class="newsheading">
-<span class="newstitle">나비 0.13 버전 출시</span>
+<span class="newstitle">나비 한글 입력기 버전  0.13 버전 출시</span>
 <span class="newsdate">2004-06-10</span>&nbsp;</h1>
 <div class="news">
 <img alt="[?]" src="./images/nabi_new.png"><p></p><p>
