오타 수정 (Documanet->Document, Borad->Board)
git-svn-id: http://kldp.net/svn/nabi/trunk@511 3598d0bf-7bfb-0310-a9b8-e6047f1a0475

--- a/web/document_en.html
+++ b/web/document_en.html
@@ -46,7 +46,7 @@
 </td>
 <td id="main" width="100%">
 
-<h1>Documanet</h1>
+<h1>Document</h1>
 <h2>An easy to use hangul and hanja X input method</h2>
 <right>
 <h5>This Document witten by Ben Blish</h3>
