--- a/web/english.html
+++ b/web/english.html
@@ -39,7 +39,7 @@
   <span> | </span>
   <a href="http://kldp.net/projects/nabi/">Project Home</a>
   <span> | </span>
-  <a href="http://kldp.net/forum/forum.php?forum_id=897" class="sub">Borad</a>
+  <a href="http://kldp.net/forum/forum.php?forum_id=897" class="sub">Board</a>
   <span> | </span>
   <a href="http://kldp.net/tracker/?atid=100275&group_id=275&func=browse" class="sub">Bugs</a>  
   <span> ] </span>
