--- a/web/english.html
+++ b/web/english.html
@@ -18,7 +18,7 @@
 <tr valign="top">
 <td align="left"><a href="http://nabi.kldp.net/"><img id="titlebarleft" src="./images/nabi_icon.png" alt="[The Nabi]" border="0"></a></td>
 <td width="99%"><br></td>
-<td align="right"><a href="index.html"><img id="titlebarright" src="./images/korean.png" alt="" border="0"></a></td>
+<td align="right"><a href="index.html"><img id="titlebarright" src="./images/hangul.png" alt="" border="0"></a></td>
 </tr>
 </tbody>
 </table>
